--- a/src/app/borrar/borrar.component.html
+++ b/src/app/borrar/borrar.component.html
@@ -1,1 +1,4 @@
-<p>borrar works!</p>
+<p>¿Quieres borrar a: {{cliente.nombre}}?</p>
+
+<button routerLink="/clientes" (click)="borrar()">borrar</button>
+<button routerLink="/clientes">cancelar</button>
